languages/CNNArchLang/src/test/resources/invalid_tests/checkAdaNetToManyLayers.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture checkAdaNetToManyLayers(){
    def input Z(0:255)^{1, 28, 28} data
    def output Q(0:1)^{10} softmax

    data ->
    AdaNet()->
    AdaNet()->
    softmax;
}
